Add changes to hide rest_api_reserved_user